--- a/src/Components/Navbar/Avatar/avatar.scss
+++ b/src/Components/Navbar/Avatar/avatar.scss
@@ -1,7 +1,8 @@
 .avatar {
   grid-area: avatar;
 
-  // img {
-  // width: 160px;
-  // }
+  img {
+    border: 0.5rem solid rgba(255, 255, 255, 0.2);
+    border-radius: 100%;
+  }
 }
