Adds space between experience details and dates

--- a/astro-client/src/components/ExperienceRow.astro
+++ b/astro-client/src/components/ExperienceRow.astro
@@ -18,8 +18,8 @@ interface Props {
 const { experience } = Astro.props;
 ---
 
-<article class="flex flex-row mb-5">
-	<div class="mr-auto text-gray-500">
+<article class="flex flex-row mb-5 justify-between">
+	<div class="text-gray-500 w-1/2">
 		<!-- Position -->
 		<h3 class="mb-0">{experience.position}</h3>
 
