--- a/astro-client/src/components/About.astro
+++ b/astro-client/src/components/About.astro
@@ -9,9 +9,9 @@ const {
 
 <section
 	id="about"
-	class="min-h-screen flex flex-col p-12 border border-[#dee2e6]"
+	class="min-h-screen p-12 border border-[#dee2e6] flex justify-center items-center"
 >
-	<div class="my-auto mx-0">
+	<div class="2xl:w-2/3 w-full">
 		<h1 class="mb-2">Abdirahman <span class="text-[#594157]">Haji</span></h1>
 
 		<div class="space-y-12">
