--- a/astro-client/src/components/Experience.astro
+++ b/astro-client/src/components/Experience.astro
@@ -7,9 +7,9 @@ const { experiences } = resume;
 
 <section
 	id="experience"
-	class="min-h-screen flex flex-col p-12 border border-[#dee2e6]"
+	class="min-h-screen p-12 border border-[#dee2e6] flex justify-center items-center"
 >
-	<div class="my-auto mx-0">
+	<div class="2xl:w-2/3 w-full">
 		<h2 class="mb-12">Experience</h2>
 
 		<div class="space-y-12">
