Update section ID to use title.toLowerCase() for scrolling purposes

--- a/astro-client/src/components/SectionLayout.astro
+++ b/astro-client/src/components/SectionLayout.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props;
 ---
 
 <section
-	id="skills"
+	id={title.toLowerCase()}
 	class="min-h-screen p-12 border border-[#dee2e6] flex justify-center items-center"
 >
 	<div class="2xl:w-2/3 w-full">
