Add Skills component to Resume

--- a/astro-client/src/components/Resume.astro
+++ b/astro-client/src/components/Resume.astro
@@ -1,6 +1,7 @@
 ---
 import About from './About.astro';
 import Experience from './Experience.astro';
+import Skills from './Skills.astro';
 ---
 
 <main
@@ -9,4 +10,5 @@ import Experience from './Experience.astro';
 >
 	<About />
 	<Experience />
+	<Skills />
 </main>
