Add Education component to Resume

--- a/astro-client/src/components/Resume.astro
+++ b/astro-client/src/components/Resume.astro
@@ -1,5 +1,6 @@
 ---
 import About from './About.astro';
+import Education from './Education.astro';
 import Experience from './Experience.astro';
 import Skills from './Skills.astro';
 ---
@@ -11,4 +12,5 @@ import Skills from './Skills.astro';
 	<About />
 	<Experience />
 	<Skills />
+	<Education />
 </main>
