--- a/astro-client/src/components/SectionLayout.astro
+++ b/astro-client/src/components/SectionLayout.astro
@@ -1,13 +1,14 @@
 ---
 interface Props {
 	title: string;
+	slug: string;
 }
 
-const { title } = Astro.props;
+const { title, slug } = Astro.props;
 ---
 
 <section
-	id={title.toLowerCase()}
+	id={slug}
 	class="min-h-screen p-12 border border-[#dee2e6] flex justify-center items-center"
 >
 	<div class="2xl:w-2/3 w-full">
