--- a/astro-client/src/components/Education.astro
+++ b/astro-client/src/components/Education.astro
@@ -8,7 +8,7 @@ const {
 } = resumeJson;
 ---
 
-<SectionLayout title="Education">
+<SectionLayout title="Education" slug="education">
 	<article class="flex flex-row justify-between mb-12">
 		<!-- Institution info -->
 		<div class="text-gray-500">
