--- a/astro-client/src/components/Skills.astro
+++ b/astro-client/src/components/Skills.astro
@@ -2,7 +2,7 @@
 import SectionLayout from './SectionLayout.astro';
 ---
 
-<SectionLayout title="Skills">
+<SectionLayout title="Skills" slug="skills">
 	<!-- Programming Languages -->
 	<article class="mb-10">
 		<h3
