Add Leadership section to Resume

--- a/astro-client/src/components/NavBar.astro
+++ b/astro-client/src/components/NavBar.astro
@@ -52,6 +52,14 @@ import Avatar from './Avatar.astro';
 
 		<li>
 			<a
+				href="#leadership"
+				class="block uppercase leading-6 font-semibold px-2 py-4 text-[rgba(255,255,255,0.5)] hover:text-[rgba(255,255,255,0.75)] active:text-white"
+				>Leadership</a
+			>
+		</li>
+
+		<li>
+			<a
 				href="#contact"
 				class="block uppercase leading-6 font-semibold px-2 py-4 text-[rgba(255,255,255,0.5)] hover:text-[rgba(255,255,255,0.75)] active:text-white"
 				>Contact</a
