--- a/astro-client/src/components/Resume.astro
+++ b/astro-client/src/components/Resume.astro
@@ -2,6 +2,7 @@
 import About from './About.astro';
 import Education from './Education.astro';
 import Experience from './Experience.astro';
+import Leadership from './Leadership.astro';
 import Skills from './Skills.astro';
 ---
 
@@ -13,4 +14,5 @@ import Skills from './Skills.astro';
 	<Experience />
 	<Skills />
 	<Education />
+	<Leadership />
 </main>
