Add Contact component to Resume page

--- a/astro-client/src/components/Resume.astro
+++ b/astro-client/src/components/Resume.astro
@@ -1,5 +1,6 @@
 ---
 import About from './About.astro';
+import Contact from './Contact.astro';
 import Education from './Education.astro';
 import Experience from './Experience.astro';
 import Leadership from './Leadership.astro';
@@ -15,4 +16,5 @@ import Skills from './Skills.astro';
 	<Skills />
 	<Education />
 	<Leadership />
+	<Contact />
 </main>
