fix h3 in education

--- a/astro-client/src/components/Education.astro
+++ b/astro-client/src/components/Education.astro
@@ -12,7 +12,7 @@ const {
 	<article class="flex flex-row justify-between mb-12">
 		<!-- Institution info -->
 		<div class="text-gray-500">
-			<h3 class="uppercase font-medium text-[1.35rem]">{institution}</h3>
+			<h3 class="uppercase font-bold text-[1.75rem]">{institution}</h3>
 
 			<p
 				class="uppercase font-medium text-[1.35rem] mb-4"
