Update component imports and file structure

--- a/astro-client/src/components/Resume/Education.astro
+++ b/astro-client/src/components/Resume/Education.astro
@@ -1,7 +1,7 @@
 ---
 import SectionLayout from './SectionLayout.astro';
 
-import resumeJson from '../data/resume.json';
+import resumeJson from '../../data/resume.json';
 
 const {
 	education: { institution, location, degree, major, endDate, courses },
