--- a/astro-client/src/components/Resume/Experience.astro
+++ b/astro-client/src/components/Resume/Experience.astro
@@ -1,9 +1,9 @@
 ---
-import resume from '../data/resume.json';
+import resumeJson from '../../data/resume.json';
 import ExperienceRow from './ExperienceRow.astro';
 import SectionLayout from './SectionLayout.astro';
 
-const { experiences } = resume;
+const { experiences } = resumeJson;
 ---
 
 <SectionLayout title="Experience" slug="experience">
