--- a/astro-client/src/pages/index.astro
+++ b/astro-client/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import NavBar from '../components/NavBar.astro';
-import Resume from '../components/Resume.astro';
+import NavBar from '../components/Nav/NavBar.astro';
+import Resume from '../components/Resume/Resume.astro';
 ---
 
 <Layout title="Abdirahman Haji">
