--- a/astro-client/src/components/Resume/Leadership.astro
+++ b/astro-client/src/components/Resume/Leadership.astro
@@ -1,5 +1,5 @@
 ---
-import resumeJson from '../data/resume.json';
+import resumeJson from '../../data/resume.json';
 
 const { leadership } = resumeJson;
 
