Update import paths in About.astro and Avatar.astro to fix build errors

--- a/astro-client/src/components/Nav/Avatar.astro
+++ b/astro-client/src/components/Nav/Avatar.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import hajiYosemite from '../images/haji_yosemite.png';
+import hajiYosemite from '../../images/haji_yosemite.png';
 ---
 
 <div
