Add Projects section to Resume

--- a/astro-client/src/components/Resume/Resume.astro
+++ b/astro-client/src/components/Resume/Resume.astro
@@ -4,6 +4,7 @@ import Contact from './Contact.astro';
 import Education from './Education.astro';
 import Experience from './Experience.astro';
 import Leadership from './Leadership.astro';
+import Projects from './Projects.astro';
 import Skills from './Skills.astro';
 ---
 
@@ -12,6 +13,7 @@ import Skills from './Skills.astro';
 	style="width: calc(100vw - 17rem);"
 >
 	<About />
+	<Projects />
 	<Experience />
 	<Skills />
 	<Education />
