Update border style in Projects component

--- a/astro-client/src/components/Resume/Projects.astro
+++ b/astro-client/src/components/Resume/Projects.astro
@@ -11,7 +11,7 @@ const { projects } = resumeJson;
 			const { title, date, summary, repo, link } = project;
 
 			return (
-				<article class="text-gray-600 mb-12 last:mb-0 border-b border-b-gray-400 pb-4">
+				<article class="text-gray-600 mb-12 last:mb-0 border-b-4 border-b-gray-400 pb-4">
 					<h3>{title}</h3>
 
 					<p>Date: {date}</p>
