--- a/astro-client/src/layouts/Layout.astro
+++ b/astro-client/src/layouts/Layout.astro
@@ -21,6 +21,7 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
+		<meta property="og:image" content="/abdirahmanhaji-screenshot.png" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<link
 			rel="stylesheet"
