Update meta tags for personal website

--- a/astro-client/src/pages/index.astro
+++ b/astro-client/src/pages/index.astro
@@ -4,7 +4,7 @@ import NavBar from '../components/Nav/NavBar.astro';
 import Resume from '../components/Resume/Resume.astro';
 ---
 
-<Layout title="Abdirahman Haji">
+<Layout title="Abdirahman Haji | Resume">
 	<header class="fixed top-0 left-0">
 		<NavBar />
 	</header>
