--- a/astro-client/src/layouts/Layout.astro
+++ b/astro-client/src/layouts/Layout.astro
@@ -19,9 +19,30 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="Abdirahman Haji's personal website" />
 		<meta name="viewport" content="width=device-width" />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://abdirahmanhaji.com" />
+		<meta property="og:title" content="Abdirahman Haji | Resume" />
+		<meta
+			property="og:description"
+			content="Abdirahman Haji's personal website"
+		/>
 		<meta property="og:image" content="/abdirahmanhaji-screenshot.png" />
+
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta property="twitter:domain" content="abdirahmanhaji.com" />
+		<meta property="twitter:url" content="https://abdirahmanhaji.com" />
+		<meta name="twitter:title" content="Abdirahman Haji | Resume" />
+		<meta
+			name="twitter:description"
+			content="Abdirahman Haji's personal website"
+		/>
+		<meta name="twitter:image" content="/abdirahmanhaji-screenshot.png" />
+
 		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<link
 			rel="stylesheet"
