Decrease Avatar image dimensions

--- a/astro-client/src/components/Nav/Avatar.astro
+++ b/astro-client/src/components/Nav/Avatar.astro
@@ -9,6 +9,8 @@ import hajiYosemite from '../../images/haji_yosemite.png';
 	<Image
 		src={hajiYosemite}
 		alt="Abdirahman Haji"
-		class="object-cover object-center w-full h-full"
+		width={320}
+		height={320}
+		class="object-cover object-center"
 	/>
 </div>
